tests/aster/x/hs/binary_precedence.out

/workspace/mochi/tests/aster/x/hs/binary_precedence.hs:5:8: error:
    Unexpected do block in function application:
        do print (1 + 2 * 3)
    Suggested fixes:
      • Use parentheses.
      • Perhaps you intended to use BlockArguments
  |
5 | main = do print (1 + 2 * 3)
  |        ^^^^^^^^^^^^^^^^^^^^
